se elimino el archivo de pruebaCss y se volvio a linkear todas las paginas

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "proyectocoder",
   "version": "1.0.0",
-  "description": "",
+  "description": "proyecto curso desarrollo web",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/prueba.scss css/pruebacss.css",
+    "build-css": "node-sass --include-path scss scss/estilo.scss estilos/estilo.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
 
   },
